# libcrossaudio

./: .cirrus.yml  CMakeLists.txt  CMakePresets.json  NOTE  vcpkg.json
.github/workflows/: build.yml
cmake/: CrossAudioCompiler.cmake
include/: NOTE
include/CrossAudio/: Direction.h  Engine.h  ErrorCode.h
include/crossaudio/: Backend.h  BitFormat.h  Channel.h  Direction.h  Engine.h  ErrorCode.h  Flux.h  Macros.h  Node.h
src/: Backend.c  Backend.h  CMakeLists.txt  Engine.c  Engine.h  Flux.c  Flux.h  Macros.h  Node.c  Node.h
src/backends/: CMakeLists.txt
src/backends/ALSA/: ALSA.cpp  ALSA.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Flux.cpp  Flux.hpp
src/backends/OSS/: CMakeLists.txt  Engine.cpp  Engine.hpp  FileDescriptor.cpp  FileDescriptor.hpp  Flux.cpp  Flux.hpp  Mixer.cpp  Mixer.hpp  OSS.cpp  OSS.hpp  PauseFlag.hpp
src/backends/PipeWire/: CMakeLists.txt  Engine.cpp  Engine.hpp  EventManager.cpp  EventManager.hpp  Flux.cpp  Flux.hpp  Library.cpp  Library.h  Library.hpp  PipeWire.c  PipeWire.cpp  PipeWire.h  PipeWire.hpp
src/backends/PulseAudio/: CMakeLists.txt  Engine.cpp  Engine.hpp  Flux.cpp  Flux.hpp  Library.cpp  Library.hpp  PulseAudio.cpp  PulseAudio.hpp
src/backends/Sndio/: CMakeLists.txt  Engine.cpp  Engine.hpp  Flux.cpp  Flux.hpp  Library.cpp  Library.hpp  Sndio.cpp  Sndio.hpp
src/backends/WASAPI/: CMakeLists.txt  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  EventManager.cpp  EventManager.hpp  Flux.cpp  Flux.hpp  WASAPI.cpp  WASAPI.hpp
src/tests/: CMakeLists.txt  Common.h  Key.h  RingBuffer.h
src/tests/TestEnum/: CMakeLists.txt  Enum.c
src/tests/TestLoopback/: CMakeLists.txt  Loopback.c
tests/: CMakeLists.txt  Common.h  Loopback.c  RingBuffer.h
